# data-parser

./: .gitignore  main.py  pyproject.toml  run.sh
adapter/: BaseAdapter.py  FacebookAdapter.py  TwitterAdapter.py  __init__.py
canonical/: Author.py  Comment.py  Media.py  NormalizedPost.py  Reaction.py  __init__.py
config/: Config.py
parser_factory/: ParserService.py
storage/: MongoStorage.py  Storage.py  ValkeyDeDupeStorage.py  __init__.py
utils/: __init__.py  date_utils.py  hash_utils.py
