[project]
name = "data-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2025.8.3",
    "fastapi>=0.117.1",
    "pydantic>=2.11.9",
    "pymongo[srv]>=4.15.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.36.0",
    "valkey>=6.1.1",
]
